--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,13 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+
+#mail send
+spring.mail.host=smtp.naver.com
+spring.mail.port=465
+spring.mail.username=clduddkwk@naver.com
+spring.mail.password=cldud9626!
+spring.mail.properties.mail.smtp.auth=ture
+spring.mail.properties.mail.smtp.ssl.enable=true
+
