2022 01 11 19:47 [header, footer, 로그인 세션 오류 해결] ApplicationConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
-
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
 #mail send
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
