--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8083
+server.servlet.encoding.force=true
+server.servlet.encoding.enabled=true
 #DB Connect DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/anbd?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,6 +20,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 #mail send
@@ -27,4 +30,3 @@ spring.mail.username=clduddkwk@naver.com
 spring.mail.password=cldud9626!
 spring.mail.properties.mail.smtp.auth=ture
 spring.mail.properties.mail.smtp.ssl.enable=true
-
