2022 02 11 18:31 [1대1 채팅 기능 일부 구현]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.mail.username=clduddkwk@naver.com
 spring.mail.password=cldud9626!
 spring.mail.properties.mail.smtp.auth=ture
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS: false
