2022 03/14 21:09 [에러페이지 설정]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,8 @@ spring.mail.password=cldud9626!
 spring.mail.properties.mail.smtp.auth=ture
 spring.mail.properties.mail.smtp.ssl.enable=true
 
+#error
+server.error.include-exception=TRUE
+server.error.include-stacktrace=ALWAYS
+server.error.whitelabel.enabled=FALSE
+
