--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 	implementation 'org.apache.logging.log4j:log4j-core:2.17.0'
 	implementation 'org.apache.logging.log4j:log4j-api:2.17.0'
 	implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.17.0'
-	implementation 'org.springframework.web.filter.CharacterEncodingFilter'
-
+	implementation 'org.jsoup:jsoup:1.14.3'
+	
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
