--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.freemarker.cache=false
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
 spring.mail.username=clduddkwk@naver.com
-spring.mail.password=cldud9626!
+spring.mail.password=cldud9626!@
 spring.mail.properties.mail.smtp.auth=ture
 spring.mail.properties.mail.smtp.ssl.enable=true
 
