--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,7 @@ hs_err_pid*
 replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java
+
+
+### my ignore ###
+src/main/resources/application.proreties
