--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=8083
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
 #DB Connect DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/anbd?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${anbd.cdgyfvpuojra.ap-northeast-2.rds.amazonaws.com}/anbd?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=anbd
-spring.datasource.password=1234
+spring.datasource.password=clsrn9626
 #DBMS : mysql
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
